--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>webpack-vue学习</title>
 </head>
-<body>
+<body style="background-color: #fff">
     <div id="app">
         
     </div>
